ajustes no tratamento de exceção e testes